# braced_bays_demo

./: README.md  develop.ipynb  pyproject.toml  requirements.txt
eng_module/: columns.py  load_factors.py  sections_db.py
eng_module/section_data/: aisc_hss_sections_si.csv  aisc_hss_sections_us.csv
notebooks/: develop.ipynb
