[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "braced_bays_demo_app"
authors = [{name = "Connor Ferster and Max Loeb", email = "connor@structuralpython.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/connorferster/braced_bays_demo_app"
